# q2-nasp2-types

./: .gitattributes  LICENSE  requirements.txt  setup.cfg  setup.py  versioneer.py
q2_nasp2_types/: __init__.py  _version.py  formats.py  functions.py  plugin_setup.py  types.py
q2_nasp2_types.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
q2_nasp2_types/alignment/: __init__.py  _formats.py  _transformers.py  _types.py
q2_nasp2_types/all/: __init__.py  _transformers.py  _types.py
q2_nasp2_types/config/: __init__.py  _formats.py  _types.py
q2_nasp2_types/index/: __init__.py  _formats.py  _types.py
q2_nasp2_types/snp/: __init__.py  _formats.py  _types.py
