
[metadata]
name = q2-nasp2-types
url = github.com/CRideTGen/q2-nasp2-types
license = Academic and Research License
author = Chase Ridenour
author_email = cridenour@tgen.org
description = nasp2-types is a qiime2 pipeline

[options]
package =
	find:
python_requires = >=3.6
zip_safe = no

[options.packages.find]
exclude=build tests

[options.entry_points]
qiime2.plugins =
	q2-nasp2-types = q2_nasp2_types.plugin_setup:plugin


[versioneer]
VCS = git
style = pep440
versionfile_source = q2_nasp2_types/_version.py
versionfile_build = q2_nasp2_types/_version.py
tag_prefix = 0.0.1
parentdir_prefix = q2-nasp2-types